--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,4 +7,4 @@
   community.windows.win_domain_group:
     name: g_g_sec_citrix_users
     scope: global
-    path: OU=Security,OU=Groups,OU=Objects,DC=democloud,DC=local
+    path: OU=Security,OU=Groups,OU=Objects,DC=dt,DC=democloud
